<?xml version="1.0"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.1.0</version>
  <description>Launch and configuration package for sensor validation stack.</description>
  <maintainer email="dev@example.com">ROS2 Sensor Validation</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>sensor_sim</depend>
  <depend>sensor_diagnostics</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
