<?xml version="1.0"?>
<package format="3">
  <name>sensor_diagnostics</name>
  <version>0.1.0</version>
  <description>Runtime diagnostics and fault orchestration for robotics sensor validation.</description>
  <maintainer email="dev@example.com">ROS2 Sensor Validation</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>diagnostic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
