<?xml version="1.0"?>
<package format="3">
  <name>sensor_regression_tests</name>
  <version>0.1.0</version>
  <description>Regression tests for ROS2 sensor validation stack.</description>
  <maintainer email="dev@example.com">ROS2 Sensor Validation</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>diagnostic_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>launch_testing</depend>
  <depend>robot_bringup</depend>

  <test_depend>ament_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
